--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,7 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- Example dependencies (if any needed) -->
-        <!-- Add dependencies for testing, logging, or other libraries here -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.2</version>
-            <scope>test</scope>
-        </dependency>
+        <!-- Add necessary dependencies (e.g., logging, etc.) -->
     </dependencies>
 
     <build>
@@ -27,21 +20,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>  <!-- Set Java version 8 -->
-                    <target>1.8</target>  <!-- Set Java version 8 -->
-                </configuration>
-            </plugin>
-            <!-- Maven Jar Plugin to create a runnable JAR with main class -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Main-Class>com.example.Main</Main-Class> <!-- Your main class -->
-                        </manifestEntries>
-                    </archive>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
